Fix toolbar flickering in fullscreen

--- a/src/skin/css/fullscreen.css
+++ b/src/skin/css/fullscreen.css
@@ -1,5 +1,5 @@
 ﻿@-moz-document url(chrome://browser/content/browser.xhtml) {
-	:root[inFullscreen] #navigator-toolbox:is(:hover, :focus-within) #PersonalToolbar:not([collapsed="true"]):not([collapsed]) {
+	:root[inFullscreen] #navigator-toolbox:is(:hover, :focus-within, :has([open="true"])) #PersonalToolbar:not([collapsed="true"]):not([collapsed]) {
 		visibility: visible !important;
 	}
 }
